syntax = "proto3";

package ose.datos.organizacion;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";

message ICliente {
  optional string _id = 1;
  string nombre = 2;
  optional string codigo = 3;
  optional bool tenantSemilla = 4;
  optional bool activo = 5;
  optional google.protobuf.Struct configuracion = 6;
  optional string fechaCreacion = 7;
}

message ICreateCliente {
  string nombre = 1;
  optional string codigo = 2;
  optional bool tenantSemilla = 3;
  optional bool activo = 4;
  optional google.protobuf.Struct configuracion = 5;
}

message IUpdateCliente {
  optional string nombre = 1;
  optional string codigo = 2;
  optional bool tenantSemilla = 3;
  optional bool activo = 4;
  optional google.protobuf.Struct configuracion = 5;
}

message IDistrito {
  optional string _id = 1;
  string idJefatura = 2;
  string nombre = 3;
  optional string codigo = 4;
  optional string descripcion = 5;
  optional bool activo = 6;
  optional google.protobuf.Struct frontera = 7;
  optional double poblacion = 8;
  optional double conexiones = 9;
  optional double redKm = 10;
  optional string configuracionBalance = 11;
  optional string fechaCreacion = 12;
  optional google.protobuf.Any jefatura = 13;
}

message ICreateDistrito {
  string idJefatura = 1;
  string nombre = 2;
  optional string codigo = 3;
  optional string descripcion = 4;
  optional bool activo = 5;
  optional google.protobuf.Struct frontera = 6;
  optional double poblacion = 7;
  optional double conexiones = 8;
  optional double redKm = 9;
  optional string configuracionBalance = 10;
}

message IUpdateDistrito {
  optional string idJefatura = 1;
  optional string nombre = 2;
  optional string codigo = 3;
  optional string descripcion = 4;
  optional bool activo = 5;
  optional google.protobuf.Struct frontera = 6;
  optional double poblacion = 7;
  optional double conexiones = 8;
  optional double redKm = 9;
  optional string configuracionBalance = 10;
}

message IDivision {
  optional string _id = 1;
  string idCliente = 2;
  string tipo = 3;
  string nombre = 4;
  optional string codigo = 5;
  optional string descripcion = 6;
  optional bool activo = 7;
  optional google.protobuf.Struct configuracion = 8;
  optional string fechaCreacion = 9;
  optional google.protobuf.Any cliente = 10;
}

message ICreateDivision {
  string idCliente = 1;
  string tipo = 2;
  string nombre = 3;
  optional string codigo = 4;
  optional string descripcion = 5;
  optional bool activo = 6;
  optional google.protobuf.Struct configuracion = 7;
}

message IUpdateDivision {
  optional string idCliente = 1;
  optional string tipo = 2;
  optional string nombre = 3;
  optional string codigo = 4;
  optional string descripcion = 5;
  optional bool activo = 6;
  optional google.protobuf.Struct configuracion = 7;
}

message IJefatura {
  optional string _id = 1;
  string idDivision = 2;
  string nombre = 3;
  optional string codigo = 4;
  optional string descripcion = 5;
  optional bool activo = 6;
  optional google.protobuf.Struct configuracion = 7;
  optional string fechaCreacion = 8;
  optional google.protobuf.Any division = 9;
}

message ICreateJefatura {
  string idDivision = 1;
  string nombre = 2;
  optional string codigo = 3;
  optional string descripcion = 4;
  optional bool activo = 5;
  optional google.protobuf.Struct configuracion = 6;
}

message IUpdateJefatura {
  optional string idDivision = 1;
  optional string nombre = 2;
  optional string codigo = 3;
  optional string descripcion = 4;
  optional bool activo = 5;
  optional google.protobuf.Struct configuracion = 6;
}


service ClienteService {
  rpc Create(ICreateCliente) returns (ICliente);
  rpc Find(QueryRequest) returns (IClienteList);
  rpc FindById(IdRequest) returns (ICliente);
  rpc Update(UpdateClienteRequest) returns (ICliente);
  rpc Delete(IdRequest) returns (DeleteResponse);
}

message UpdateClienteRequest {
  string id = 1;
  IUpdateCliente data = 2;
}

message IClienteList {
  repeated ICliente items = 1;
  int32 total = 2;
}

service DistritoService {
  rpc Create(ICreateDistrito) returns (IDistrito);
  rpc Find(QueryRequest) returns (IDistritoList);
  rpc FindById(IdRequest) returns (IDistrito);
  rpc Update(UpdateDistritoRequest) returns (IDistrito);
  rpc Delete(IdRequest) returns (DeleteResponse);
}

message UpdateDistritoRequest {
  string id = 1;
  IUpdateDistrito data = 2;
}

message IDistritoList {
  repeated IDistrito items = 1;
  int32 total = 2;
}

service DivisionService {
  rpc Create(ICreateDivision) returns (IDivision);
  rpc Find(QueryRequest) returns (IDivisionList);
  rpc FindById(IdRequest) returns (IDivision);
  rpc Update(UpdateDivisionRequest) returns (IDivision);
  rpc Delete(IdRequest) returns (DeleteResponse);
}

message UpdateDivisionRequest {
  string id = 1;
  IUpdateDivision data = 2;
}

message IDivisionList {
  repeated IDivision items = 1;
  int32 total = 2;
}

service JefaturaService {
  rpc Create(ICreateJefatura) returns (IJefatura);
  rpc Find(QueryRequest) returns (IJefaturaList);
  rpc FindById(IdRequest) returns (IJefatura);
  rpc Update(UpdateJefaturaRequest) returns (IJefatura);
  rpc Delete(IdRequest) returns (DeleteResponse);
}

message UpdateJefaturaRequest {
  string id = 1;
  IUpdateJefatura data = 2;
}

message IJefaturaList {
  repeated IJefatura items = 1;
  int32 total = 2;
}

message QueryRequest {
  optional string filter = 1;
  optional int32 limit = 2;
  optional int32 skip = 3;
}

message IdRequest {
  string id = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}
